Added buzkill test

--- a/examples/example.toml
+++ b/examples/example.toml
@@ -20,6 +20,7 @@ args = ["run", "main.go"]
 prefix = "BACK"
 color = "blue"
 on_failure = "wait"
+silent = true
 
 # [[processes]]
 # name = "example fail2"
