--- a/examples/example.toml
+++ b/examples/example.toml
@@ -19,8 +19,10 @@ show_pid = false
 args = ["run", "main.go"]
 prefix = "BACK"
 color = "blue"
-on_failure = "wait"
-silent = true
+on_failure = "restart"
+on_complete = "restart"
+restart_attempts = 3
+silent = false
 
 # [[processes]]
 # name = "example fail2"
