--- a/examples/example.toml
+++ b/examples/example.toml
@@ -31,15 +31,15 @@ show_pid = false
 args = ["run", "main.go"]
 prefix = "TRIG"
 color = "yellow"
-on_failure = "restart"
-on_complete = "restart"
-restart_attempts = 3
+on_failure = "wait"
+on_complete = "wait"
+restart_attempts = 0
 silent = false
   [processes.trigger]
-    # [processes.trigger.filesystem]
-    #   watch = ["."]
-    #   ignore = ["test"]
-    #   filter_for = ["*.test"]
+    [processes.trigger.filesystem]
+      watch = ["."]
+      ignore = ["test"]
+      filter_for = ["*.test"]
     [processes.trigger.process]
       on_start = ["example fail"]
 
