--- a/examples/example.toml
+++ b/examples/example.toml
@@ -37,7 +37,7 @@ restart_attempts = 0
 silent = false
   [processes.trigger]
     [processes.trigger.filesystem]
-      watch = ["."]
+      watch = [".", "."]
       ignore = ["test"]
       filter_for = ["*.test"]
     [processes.trigger.process]
