Updated dependencies and test cases making files and dirs

--- a/examples/example.toml
+++ b/examples/example.toml
@@ -8,7 +8,7 @@ name = "cmd"
 command = "cmd"
 prefix = "FRONT"
 color = "green"
-on_failure = "buzzkill"
+on_failure = "wait"
 on_complete =  "wait"
 stdin_on_start = "echo hello\nexit"
 
