--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,12 +14,32 @@
       "showLog": true
     },
     {
-      "name": "App",
+      "name": "Debug dir search",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${workspaceFolder}/main.go", // Point directly to main.go
+      "args": ["./examples"], // Pass the additional argument
+      "cwd": "${workspaceFolder}", // Set the current working directory
+      "console": "integratedTerminal" // Use VS Code's integrated terminal for interactive input
+    },
+    {
+      "name": "Debug toml file",
       "type": "go",
       "request": "launch",
       "mode": "auto",
       "program": "${workspaceFolder}/main.go", // Point directly to main.go
       "args": ["./examples/example.toml"], // Pass the additional argument
+      "cwd": "${workspaceFolder}", // Set the current working directory
+      "console": "integratedTerminal" // Use VS Code's integrated terminal for interactive input
+    },
+    {
+      "name": "Debug generate",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${workspaceFolder}/main.go", // Point directly to main.go
+      "args": ["--generate"], // Pass the additional argument
       "cwd": "${workspaceFolder}", // Set the current working directory
       "console": "integratedTerminal" // Use VS Code's integrated terminal for interactive input
     }
