Fixed fs trigger stability and ensuring processses are exited

--- a/examples/example2.toml
+++ b/examples/example2.toml
@@ -13,6 +13,7 @@ on_complete =  "wait"
   [processes.trigger]
     restart_process = true
     [processes.trigger.filesystem]
+      # debounce_ms = 50
       watch = [".", "./tests/.tmp"]
       ignore = ["test"]
       filter_for = ["*.test"]
